# test-sparse_indexed_extraction

./: CMakeLists.txt  README.md  extractor.cpp
